# rust-mongo-embeded

./: Cargo.toml  README.md
src/: downloader.rs  extractor.rs  lib.rs  process.rs
tests/: connect_listern.rs  integration_test.rs
version/: 0.1.5.md  1.0.0.md
